style: fix slides alignment, add cards animation

--- a/src/index.css
+++ b/src/index.css
@@ -213,6 +213,7 @@ body {
 
 .carousel__container {
   display: flex;
+  justify-content: center;
 }
 
 .footer {
