--- a/src/pages/CatalogPage/CatalogPage.css
+++ b/src/pages/CatalogPage/CatalogPage.css
@@ -112,6 +112,13 @@
   cursor: pointer;
   height: 460px !important;
   justify-content: space-between;
+  transition: all 0.3s ease-in-out;
+}
+
+.product-card:hover {
+  box-shadow: 0 0 10px 3px #9fb3c8;
+  transform: scale(1.02);
+  background-color: rgba(10, 16, 24, 0.2);
 }
 
 .product-card__price {
@@ -124,7 +131,6 @@
   color: #8a9dc0;
   text-decoration: line-through;
 }
-
 
 .product-card__image {
   width: 100%;
